JavaDoc e Record