@@ -5,25 +5,44 @@ import javafx.concurrent.Service;
 import javafx.concurrent.Task;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
+
+/**
+ * DocumentStatisticsService è una classe che estende Service<String> per calcolare e restituire statistiche
+ * dettagliate su un documento.
+ * <p>
+ * Questa classe permette di calcolare statistiche come il numero totale di parole, parole uniche, numero di frasi,
+ * le parole più comuni e la percentuale di similarità rispetto a una query.
+ */
 public class DocumentStatisticsService extends Service<String> {
-    private Document document;
-    private Map<Document, Map<String, Integer>> resultMapByDocument;
-    private Map<Document, Double> corrispondenzaSimiliarita;
+    private final Document document;
+    private final Map<Document, Map<String, Integer>> resultMapByDocument;
+    private final Map<Document, Double> corrispondenzaSimiliarita;
 
+    /**
+     * Costruttore per inizializzare DocumentStatisticsService con i parametri necessari.
+     *
+     * @param document                  il documento su cui calcolare le statistiche
+     * @param resultMapByDocument       una mappa che contiene i conteggi delle parole per documento
+     * @param corrispondenzaSimiliarita una mappa che contiene i valori di similarità per documento
+     */
     public DocumentStatisticsService(Document document, Map<Document, Map<String, Integer>> resultMapByDocument, Map<Document, Double> corrispondenzaSimiliarita) {
         this.document = document;
         this.resultMapByDocument = resultMapByDocument;
         this.corrispondenzaSimiliarita = corrispondenzaSimiliarita;
     }
 
+    /**
+     * Crea un task per calcolare le statistiche del documento.
+     *
+     * @return il task per calcolare le statistiche del documento
+     */
     @Override
     protected Task<String> createTask() {
         return new Task<>() {
             @Override
-            protected String call() throws Exception {
-                String testoDocumento = document.getDocument_text().replaceAll("'", " ");
+            protected String call() {
+                String testoDocumento = document.document_text().replaceAll("'", " ");
                 Map<String, Integer> documentVector = new HashMap<>(resultMapByDocument.get(document)); // Crea una copia
 
                 // Calcolo delle statistiche
@@ -35,11 +54,11 @@ public class DocumentStatisticsService extends Service<String> {
                 List<Map.Entry<String, Integer>> commonWords = documentVector.entrySet().stream()
                         .sorted(Map.Entry.comparingByValue(Comparator.reverseOrder()))
                         .limit(5)
-                        .collect(Collectors.toList());
+                        .toList();
 
                 // Rimuovi il conteggio delle parole del titolo dalla copia del vector
                 for (Map.Entry<String, Integer> entry : commonWords) {
-                    String[] parole = document.getTitle().split("\\W+");
+                    String[] parole = document.title().split("\\W+");
                     int conteggio = 0;
 
                     for (String p : parole) {
